--- a/rconfig/tests/config.yml
+++ b/rconfig/tests/config.yml
@@ -3,14 +3,15 @@ mysql:
   db: default
   host: 127.0.0.1
   port: 3306
-calendar:
-  days:
-    - 1
-    - 2
-    - 3
-    - 4
-    - 5
-  months:
-    1: January
-    2: February
-    3: March
+level1:
+  calendar:
+    days:
+      - 1
+      - 2
+      - 3
+      - 4
+      - 5
+    months:
+      1: January
+      2: February
+      3: March
