--- a/rconfig/tests/config.yml
+++ b/rconfig/tests/config.yml
@@ -15,3 +15,12 @@ level1:
       1: January
       2: February
       3: March
+human:
+  name: mary
+  likes:
+    - id: 1
+      name: mango
+    - id: 2
+      name: apple
+    - id: 3
+      name: banana
